Bug fixes with locales

--- a/app/views/widgets/mainpage/main_page_banner.phtml
+++ b/app/views/widgets/mainpage/main_page_banner.phtml
@@ -2,8 +2,8 @@
     <div class="container">
         <br><br>
         <div class="row center">
-            <a href="/contacts/course" id="app-for-course" class="btn-large waves-effect waves-light red">Подать заявку</a>
-            <a href="/feedback" id="review-button" class="btn-large waves-effect waves-light light-blue">Оставить отзыв</a>
+            <a href="/<?= LOCALE_CODE ?>/contacts/course" id="app-for-course" class="btn-large waves-effect waves-light red">Подать заявку</a>
+            <a href="/<?= LOCALE_CODE ?>/feedback" id="review-button" class="btn-large waves-effect waves-light light-blue">Оставить отзыв</a>
         </div>
         <br><br>
         <div class="row center ">
