--- a/app/views/contacts/course.phtml
+++ b/app/views/contacts/course.phtml
@@ -13,7 +13,7 @@
     </div>
 </div>
 <div class="row">
-    <form class="col s12 m12 l12" method="post" action="/contacts/course">
+    <form class="col s12 m12 l12" method="post" action="/<?= LOCALE_CODE ?>/contacts/course">
         <div class="row">
             <div class="input-field col s6 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
