--- a/app/views/contacts/support.phtml
+++ b/app/views/contacts/support.phtml
@@ -14,7 +14,7 @@
 </div>
 
 <div class="row">
-    <form class="col s12 m12 l12" method="post" action="/contacts/support">
+    <form class="col s12 m12 l12" method="post" action="/<?= LOCALE_CODE ?>/contacts/support">
         <div class="row">
             <div class="input-field col s11 m5 l5">
                 <i class="material-icons prefix">account_circle</i>
