--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>DeLanaAuto - Autoskola Daugavpilī</title>
+    <title>DeLanaAuto - <?= $this->translate->_('Автошкола в Даугавпилсе') ?></title>
 
     <meta name="title" content="<?= isset($metaTitle) ? $metaTitle : '' ?>">
     <meta name="description" content="<?= isset($metaDescription) ? $metaDescription : '' ?>">
