--- a/app/views/widgets/mainpage/main_page_banner.phtml
+++ b/app/views/widgets/mainpage/main_page_banner.phtml
@@ -2,13 +2,13 @@
     <div class="container">
         <br><br>
         <div class="row center">
-            <a href="/<?= LOCALE_CODE ?>/contacts/course" id="app-for-course" class="btn-large waves-effect waves-light red">Подать заявку</a>
-            <a href="/<?= LOCALE_CODE ?>/feedback" id="review-button" class="btn-large waves-effect waves-light light-blue">Оставить отзыв</a>
+            <a href="/<?= LOCALE_CODE ?>/contacts/course" id="app-for-course" class="btn-large waves-effect waves-light red"><?= $this->translate->_('Подать заявку') ?></a>
+            <a href="/<?= LOCALE_CODE ?>/feedback" id="review-button" class="btn-large waves-effect waves-light light-blue"><?= $this->translate->_('Оставить отзыв') ?></a>
         </div>
         <br><br>
         <div class="row center ">
             <h5 class="header col s12 white-text lighten-2 left arrow_box">
-                Запишись прямо сейчас и пройди лучший курс теоретического и практического обучения в автошколе De Lana Auto
+                <?= $this->translate->_('Запишись прямо сейчас и пройди лучший курс теоретического и практического обучения в автошколе De Lana Auto') ?>
             </h5>
         </div>
         <br><br>
