--- a/app/views/about/instructors.phtml
+++ b/app/views/about/instructors.phtml
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s12 m12 l12 center-align">
         <h5 class="left-align" id="category-title">
-            Список инструкторов
+            <?= $this->translate->_('Список инструкторов') ?>
         </h5>
     </div>
 </div>
@@ -10,7 +10,7 @@
     <div class="col s12 m12 l12">
         <?php if (!count($instructors)) { ?>
             <p class="subheader">
-                Нет информации
+                <?= $this->translate->_('Нет информации') ?>
             </p>
         <?php } else { ?>
 
