--- a/app/views/contacts/index.phtml
+++ b/app/views/contacts/index.phtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col s12 m12 l12 center-align">
         <h5 class="left-align" id="category-title">
-            Наши контакты
+            <?= $this->translate->_('Наши контакты') ?>
         </h5>
     </div>
 </div>
@@ -16,21 +16,21 @@
             <?php if ($contactsExist) { ?>
                 <?php if(!empty(Contacts::getAddress() )) { ?>
                     <?php  $address = Contacts::getAddress(); ?>
-                    <i class="tiny material-icons">add_location</i> <b>Адрес : </b>
+                    <i class="tiny material-icons">add_location</i> <b><?= $this->translate->_('Адрес') ?> : </b>
                         <?= implode(', ', $address); ?>
                     <br> <br>
                 <?php } ?>
 
                 <?php if(!empty(Contacts::getPhone() )) { ?>
                     <?php  $phones = Contacts::getPhone(); ?>
-                    <i class="tiny material-icons">phone</i>  <b>Телефон : </b>
+                    <i class="tiny material-icons">phone</i>  <b><?= $this->translate->_('Телефон') ?> : </b>
                         <?= implode(', ', $phones); ?>
                     <br> <br>
                 <?php } ?>
 
                 <?php if(!empty(Contacts::getEmail() )) { ?>
                     <?php  $emails = Contacts::getEmail(); ?>
-                    <i class="tiny material-icons">email</i>   <b>Email : </b>
+                    <i class="tiny material-icons">email</i>   <b><?= $this->translate->_('Email') ?> : </b>
                         <?= implode(', ', $emails); ?>
                     <br> <br>
                 <?php } ?>
@@ -45,7 +45,7 @@
     </div>
 
     <div class="col s6 m6 l6">
-        <a class="waves-effect waves-light btn btn-large" href="/contacts/support">Написать нам <i class="material-icons left">email</i> </a>
+        <a class="waves-effect waves-light btn btn-large" href="/contacts/support"><?= $this->translate->_('Написать нам') ?> <i class="material-icons left">email</i> </a>
     </div>
 </div>
 
