--- a/app/views/contacts/support.phtml
+++ b/app/views/contacts/support.phtml
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s8 m8 l8 center-align">
         <h5 class="left-align" id="category-title">
-            Задайте нам вопрос
+            <?= $this->translate->_('Задайте нам вопрос') ?>
         </h5>
     </div>
     <div class="col s4 m4 l4">
@@ -19,26 +19,26 @@
             <div class="input-field col s11 m5 l5">
                 <i class="material-icons prefix">account_circle</i>
                 <input id="firstname" type="text" name="firstname" class="validate <?= (isset($errors['firstname'])) ? ' invalid' : '' ?>">
-                <label for="firstname" data-error="<?= $errors['firstname'] ?? '' ?>">Имя</label>
+                <label for="firstname" data-error="<?= $errors['firstname'] ?? '' ?>"><?= $this->translate->_('Имя') ?></label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s11 m5 l5">
                 <i class="material-icons prefix">email</i>
                 <input id="email" type="email" name="email" class="validate <?= (isset($errors['email'])) ? ' invalid' : '' ?>">
-                <label for="email"  data-error="<?= $errors['email'] ?? '' ?>">Email</label>
+                <label for="email"  data-error="<?= $errors['email'] ?? '' ?>"><?= $this->translate->_('Email') ?></label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12 m12 l10">
                 <textarea id="content" name="content" class="materialize-textarea validate <?= (isset($errors['content'])) ? ' invalid' : '' ?>"></textarea>
-                <label for="content"  data-error="<?= $errors['content'] ?? '' ?>">Сообщение</label>
+                <label for="content"  data-error="<?= $errors['content'] ?? '' ?>"><?= $this->translate->_('Сообщение') ?></label>
             </div>
         </div>
         <div class="row">
             <div class="col s12 input-field">
                 <button class="btn waves-effect waves-light light-blue" type="submit">
-                    Отправить<i class="material-icons right">send</i>
+                    <?= $this->translate->_('Отправить') ?><i class="material-icons right">send</i>
                 </button>
             </div>
         </div>
