--- a/app/views/feedback/index.phtml
+++ b/app/views/feedback/index.phtml
@@ -5,7 +5,7 @@
 <?php } ?>
 <div class="row">
     <div class="col s8 m8 l8 left-align">
-        <h5 id="category-title">Оставьте свой отзыв</h5>
+        <h5 id="category-title"><?= $this->translate->_('Оставьте свой отзыв') ?></h5>
     </div>
 </div>
 
@@ -15,12 +15,12 @@
             <div class="input-field col s12 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
                 <input id="firstname" type="text" name="firstname" class="validate <?= (isset($errors['firstname'])) ? ' invalid' : '' ?>">
-                <label for="firstname" data-error="<?= $errors['firstname'] ?? '' ?>">Имя</label>
+                <label for="firstname" data-error="<?= $errors['firstname'] ?? '' ?>"><?= $this->translate->_('Имя') ?></label>
             </div>
             <div class="input-field col s12 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
                 <input id="lastname" type="text" name="lastname" class="validate <?= (isset($errors['lastname'])) ? ' invalid' : '' ?>">
-                <label for="lastname" data-error="<?= $errors['lastname'] ?? '' ?>">Фамилия</label>
+                <label for="lastname" data-error="<?= $errors['lastname'] ?? '' ?>"><?= $this->translate->_('Фамилия') ?></label>
             </div>
         </div>
 
@@ -28,25 +28,25 @@
             <div class="input-field col s12 m12 l12">
                 <i class="material-icons prefix">email</i>
                 <input id="email" type="email" name="email" class="validate <?= (isset($errors['email'])) ? ' invalid' : '' ?>">
-                <label for="email"  data-error="<?= $errors['email'] ?? '' ?>">Email</label>
+                <label for="email"  data-error="<?= $errors['email'] ?? '' ?>"><?= $this->translate->_('Email') ?></label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12 m12 l12">
                 <textarea id="comment" name="comment" class="materialize-textarea validate <?= (isset($errors['comment'])) ? ' invalid' : '' ?>"></textarea>
-                <label for="comment"  data-error="<?= $errors['comment'] ?? '' ?>">Сообщение</label>
+                <label for="comment"  data-error="<?= $errors['comment'] ?? '' ?>"><?= $this->translate->_('Сообщение') ?></label>
             </div>
         </div>
         <div class="row">
             <div class="col s8 m8 l8 input-field">
                 <button class="btn waves-effect waves-light light-blue" type="submit">
-                    Оставить отзыв<i class="material-icons right">send</i>
+                    <?= $this->translate->_('Оставить отзыв') ?><i class="material-icons right">send</i>
                 </button>
             </div>
             <div class="col s4 m4 l4 left-align input-field">
                 <a href="/feedback/all#feedback-list" class="btn waves-effect waves-light blue cyan lighten-2">
-                    Читать все отзывы <i class="material-icons right">comment</i>
+                    <?= $this->translate->_('Читать все отзывы') ?> <i class="material-icons right">comment</i>
                 </a>
             </div>
         </div>
