--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -3,7 +3,7 @@
 ?>
 <div class="row">
     <div class="col s12 m12 l12 center-align">
-        <h5 id="category-title">Новости</h5>
+        <h5 id="category-title"><?= $this->translate->_('Новости') ?></h5>
     </div>
 </div>
 <?php if (count($news) > 0) { ?>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="row news-sub-content">
                         <div class="col s6 m6 l6 news-read-button">
-                            <?= $this->tag->linkTo([$new->getLink(), 'Читать всю новость', 'title' => "$new->title", 'class' => 'waves-effect light-blue lighten-1 btn']) . '<br><br>' ?>
+                            <?= $this->tag->linkTo([$new->getLink(), $this->translate->_('Новости') , 'title' => "$new->title", 'class' => 'waves-effect light-blue lighten-1 btn']) . '<br><br>' ?>
                         </div>
 
                     </div>
@@ -48,7 +48,7 @@
     <? } ?>
 
 <?php } else { ?>
-    <h6>Новостей пока что нет!</h6>
+    <h6><?= $this->translate->_('Новостей пока что нет') ?>!</h6>
 <?php } ?>
 
 
