--- a/app/views/widgets/footer/footer_content.phtml
+++ b/app/views/widgets/footer/footer_content.phtml
@@ -15,7 +15,7 @@ use library\Widgets\FooterFeedbackWidget;
     </div>
     <div class="footer-copyright">
         <div class="container">
-            Made by <a class="orange-text text-lighten-3" href="https://www.facebook.com/Maris.Vigulis">Maris Vigulis</a>
+            Made by <a class="orange-text text-lighten-3" href="http://maris-dev.tech/">Maris Vigulis</a>
         </div>
     </div>
 </footer>
