--- a/app/views/widgets/footer/footer_feedback.phtml
+++ b/app/views/widgets/footer/footer_feedback.phtml
@@ -1,4 +1,4 @@
-<h5 class="black-text">Отзывы</h5>
+<h5 class="black-text"><?= $this->translate->_('Отзывы') ?></h5>
 <h6 class="black-text">
     <?= $feedbackMessage->comment ?>
 </h6>
