--- a/app/views/widgets/mainpage/sidebar-categories.phtml
+++ b/app/views/widgets/mainpage/sidebar-categories.phtml
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col s12 m12 l12 center-align">
-        <h5 id="category-title">Категории</h5>
+        <h5 id="category-title"><?= $this->translate->_('Категории') ?></h5>
     </div>
 </div>
 <ul class="collection categories-list">
@@ -9,6 +9,6 @@
            <?= $this->tag->linkTo([ LOCALE_CODE .  $category['href'], $category['title'], "class" => "collection-item"]) ?>
        <?php } ?>
     <?php } else { ?>
-        <h6 class="center">Категорий нет</h6>
+        <h6 class="center"><?= $this->translate->_('Категорий нет') ?></h6>
     <?php } ?>
 </ul>
