--- a/app/views/admin/layouts/admin.phtml
+++ b/app/views/admin/layouts/admin.phtml
@@ -35,9 +35,9 @@
             <li> <?= $this->tag->linkTo('admin/instructors', 'Инструкторы <i class="material-icons">supervisor_account</i>');?></li>
             <li> <?= $this->tag->linkTo('admin/polls', 'Опросы <i class="material-icons">description</i>');?></li>
             <li> <?= $this->tag->linkTo('admin/contacts', 'Контакты <i class="material-icons">settings_phone</i>')?> </li>
+            <li> <?= $this->tag->linkTo('admin/support', 'Сообщения <i class="material-icons">message</i>')?> </li>
             <li> <?= $this->tag->linkTo('admin/users', 'Администраторы  <i class="material-icons">info</i>')?> </li>
             <li> <?= $this->tag->linkTo('admin/translate', 'Переводы <i class="material-icons">translate</i>');?></li>
-
         </ul>
 
         <ul class="hide-on-med-and-down hide">
@@ -51,7 +51,9 @@
             <li> <?= $this->tag->linkTo('admin/instructors', 'Инструкторы <i class="material-icons">supervisor_account</i>');?></li>
             <li> <?= $this->tag->linkTo('admin/pols', 'Опросы <i class="material-icons">description</i>');?></li>
             <li> <?= $this->tag->linkTo('admin/contacts', 'Контакты <i class="material-icons">settings_phone</i>')?> </li>
+            <li> <?= $this->tag->linkTo('admin/support', 'Сообщения <i class="material-icons">message</i>')?> </li>
             <li> <?= $this->tag->linkTo('admin/users', 'Администраторы  <i class="material-icons">info</i>')?> </li>
+            <li> <?= $this->tag->linkTo('admin/translate', 'Переводы <i class="material-icons">translate</i>');?></li>
         </ul>
     </header>
     <main>
