--- a/app/views/feedback/all.phtml
+++ b/app/views/feedback/all.phtml
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row">
-    <form class="col s12 m12 l12" method="post" action="/feedback/send">
+    <form class="col s12 m12 l12" method="post" action="/<?= LOCALE_CODE ?>/feedback/send">
         <div class="row">
             <div class="input-field col s6 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
