--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -54,4 +54,46 @@
 </div>
     <?= (new FooterContentWidget())->getWidget() ?>
 </body>
+<script>
+    function checkform(theform){
+        var why = "";
+
+        if(theform.CaptchaInput.value == ""){
+            why += "- <?= $this->translate->_('Введите число') ?>.\n";
+        }
+        if(theform.CaptchaInput.value != ""){
+            if(ValidCaptcha(theform.CaptchaInput.value) == false){
+                why += "- <?= $this->translate->_('Введенное число не совпадает') ?>.\n";
+            }
+        }
+        if(why != ""){
+            alert(why);
+            return false;
+        }
+    }
+
+    var a = Math.ceil(Math.random() * 9)+ '';
+    var b = Math.ceil(Math.random() * 9)+ '';
+    var c = Math.ceil(Math.random() * 9)+ '';
+    var d = Math.ceil(Math.random() * 9)+ '';
+    var e = Math.ceil(Math.random() * 9)+ '';
+
+    var code = a + b + c + d + e;
+    document.getElementById("txtCaptcha").value = code;
+    document.getElementById("CaptchaDiv").innerHTML = code;
+
+    function ValidCaptcha(){
+        var str1 = removeSpaces(document.getElementById('txtCaptcha').value);
+        var str2 = removeSpaces(document.getElementById('CaptchaInput').value);
+        if (str1 == str2){
+            return true;
+        }else{
+            return false;
+        }
+    }
+
+    function removeSpaces(string){
+        return string.split(' ').join('');
+    }
+</script>
 </html>
