--- a/app/views/admin/layouts/admin.phtml
+++ b/app/views/admin/layouts/admin.phtml
@@ -24,7 +24,7 @@
                     <?= $this->tag->image(['img/admin-avatar.png', 'class' => 'circle responsive-img', 'id' => 'admin-avatar']) ?>
                     <p>
                         <span class="black-text name center-align">
-                            Привет, <?= $admin->firstname ?>
+                            Привет, <?= $admin->firstname ?> <a href="/admin/auth/logout"><i style="font-size: 20px" class="material-icons">exit_to_app</i></a>
                         </span>
                     </p>
                 </div>
